--- a/buy.html
+++ b/buy.html
@@ -18,30 +18,46 @@
         }
 
         header {
-            background-color: #fff;
-            padding: 20px 0;
-            border-bottom: 1px solid #ddd;
-            text-align: center;
+            background: white;
+            color: white;
+            padding: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 97%;
+            height: 100px; /* Adjust the height as needed */
+            position: relative;
         }
 
-        header a img {
-            height: 50px;
+        header img {
+            max-width: 200px;
+            margin-left: 20px; /* Moves the logo to the left */
+        }
+
+        nav {
+            position: absolute;
+            top: 50%; /* Moves the navigation to the middle */
+            left: 50%;
+            transform: translate(-50%, -50%); /* Centers it horizontally and vertically */
         }
 
         nav ul {
             list-style: none;
             padding: 0;
-            margin: 10px 0 0;
-            display: flex;
-            justify-content: center;
-            gap: 20px;
+            margin: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin: 0 13px;
         }
 
         nav ul li a {
+            color: black;
             text-decoration: none;
-            color: #333;
-            font-size: 16px;
+            font-size: 35px; /* Keeps the font size large */
             font-weight: bold;
+            font-family: 'Timmana';
         }
 
         footer {
