--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INTENCE MEDIA - Photography Portfolio</title>
+    <link rel="website icon" type="png" href="https://res.cloudinary.com/dfqreujbo/image/upload/v1738738526/INTEC_MEDIA1_famvag.png">
     <link rel="stylesheet" href="static/main.css">
 </head>
 <body>
