--- a/albums.html
+++ b/albums.html
@@ -446,7 +446,7 @@
         .album-text p {
             font-size: 18px;
             line-height: 1.6;
-            color: #555;
+            color: #fff;
             margin-left: 50px;
             margin-right: 50px;
         }
